# OpenTricklerAI

./: .gitignore  CMakeLists.txt  CMakeLists_blink_test.txt  OTA_BUILD_AND_USAGE.md  OTA_TEST_MODE.md  SECURITY_IMPROVEMENTS.md  application.ld  create_combined_bin.py  partition_table.json
.github/workflows/: build.yml  cmake.yml
blink-test/: CMakeLists.txt  blink.c
blink-test/.github/workflows/: build.yml
src/: CMakeLists.txt  FloatRingBuffer.cpp  FloatRingBuffer.h  access_point_mode.c  ai_tuning.c  ai_tuning.h  app.cpp  app_blink_test.cpp  charge_mode.cpp  cleanup_mode.cpp  eeprom.c  http_rest.c  input_validation.h  lwipopts.h  menu.cpp  mini_12864_module.cpp  motors.c  motors.h  neopixel_led.c  profile.c  profile.h  rest_ai_tuning.c  scale.c  scale.h  servo_gate.c  system_control.c  wireless.c  wireless.h
src/bootloader/: CMakeLists.txt  bootloader.c  bootloader.ld  flash_partitions.h  metadata.c  metadata.h
src/firmware_update/: CMakeLists.txt  crc32.c  crc32.h  firmware_download.c  firmware_download.h  firmware_manager.c  firmware_manager.h  firmware_upload.c  firmware_upload.h  flash_ops.c  flash_ops.h  rest_firmware.c  rest_firmware.h
src/html/: web_portal.html
